syntax="proto3";

package docstore;

option go_package="github.com/pydio/cells/v4/common/proto/docstore";

enum DocumentType{
    JSON = 0;
    BINARY = 1;
}

message Document {
    string ID = 2;
    DocumentType Type = 3;
    string Owner = 4;
    string Data = 5;
    string IndexableMeta = 6;
}

message DocumentQuery {
    string ID = 2;
    string Owner = 3;
    string MetaQuery = 4;
}

message PutDocumentRequest {
    string StoreID = 1;
    string DocumentID = 2;
    Document Document = 3;
}

message PutDocumentResponse {
    Document Document = 1;
}

message GetDocumentRequest {
    string StoreID = 1;
    string DocumentID = 2;
}

message GetDocumentResponse {
    Document Document = 1;
    string BinaryUrl = 2;
}

message DeleteDocumentsRequest {
    string StoreID = 1;
    string DocumentID = 2;
    DocumentQuery Query = 3;
}

message DeleteDocumentsResponse {
    bool Success = 1;
    int32 DeletionCount = 2;
}

message ListDocumentsRequest {
    string StoreID = 1;
    DocumentQuery Query = 2;
}

message ListDocumentsResponse {
    Document Document = 1;
    string BinaryUrl = 2;
    int32 Score = 3;
}

message CountDocumentsResponse {
    int64 Total = 1;
}

service DocStore {
    rpc PutDocument (PutDocumentRequest) returns (PutDocumentResponse) {};
    rpc GetDocument (GetDocumentRequest) returns (GetDocumentResponse) {};
    rpc DeleteDocuments (DeleteDocumentsRequest) returns (DeleteDocumentsResponse) {};
    rpc CountDocuments(ListDocumentsRequest) returns (CountDocumentsResponse) {};
    rpc ListDocuments(ListDocumentsRequest) returns (stream ListDocumentsResponse) {};
}